--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sidebar</title>
+    <title>header</title>
 
 </head>
 
 <body>
-
 </body>
-
 </html>
