--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>header</title>
+    <title>Header</title>
 
 </head>
 
 <body>
+    <header>
+        <div class="headerText">Kanban Project Management Tool</div>
+    </header>
+    
 </body>
+
 </html>
