add headline header

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -13,7 +13,7 @@
     <header>
         <div class="headerText">Kanban Project Management Tool</div>
     </header>
-    
+    <div id="header-logout"></div>
 </body>
 
 </html>
