--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,14 @@
+header {
+    display: flex;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 80px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px 36px 20px 348px;
+    box-sizing: border-box;
+}
+
 .headerText {
     display: flex;
     align-items: center;
@@ -6,3 +17,4 @@
     font-size: 21px;
   
 }
+
