--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@ header {
     background-color: #FFFFFF;
     width: 100%;
     height: 80px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1) !important;
     padding: 20px 36px 20px 348px;
     box-sizing: border-box;
 }
