--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -8,10 +8,64 @@
     <title>Sidebar</title>
     
     <link rel="stylesheet" href="./css/sidebar.css">
+    <link rel="stylesheet" href="./css/inter.css">
 </head>
 
 <body>
-    <div class="navMainContent"></div>
-</body>
+    <div class="navMainContent" id="navMainContent">
+        <img class="navLogo" src="./img/join-logo.png">
+        <div class="navMenu" id="sidebar-menu">
+            <a class="navLink" href="summary.html" id="id-0">
+                <div class="navCategory">
+                    <div class="navCategory-inner-frame">
+                        <img src="./img/summary-icon.svg">
+                        <p>Summary</p>
+                    </div>
+                </div>
+            </a>
+            <a class="navLink" href="board.html" id="id-1">
+                <div class="navCategory">
+                    <div class="navCategory-inner-frame">
+                        <img src="./img//board-icon.svg">
+                        <p>Board</p>
+                    </div>
+                </div>
+            </a>
+            <a class="navLink" href="task.html" id="id-2">
+                <div class="navCategory">
+                    <div class="navCategory-inner-frame">
+                        <img src="./img/write-task-icon.svg">
+                        <p>Add Task</p>
+                    </div>
+                </div>
+            </a>
+            <a class="navLink" href="contacts.html" id="id-3">
+                <div class="navCategory">
+                    <div class="navCategory-inner-frame">
+                        <img src="./img/contacts-icon.svg">
+                        <p>Contacts</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="sidebar-footer">
+            <a class="navLink" href="legal_notice.html" id="id-4">
+                <div class="navCategory">
+                    <div class="navCategory-inner-frame">
+                        <img src="./img/info-icon.png">
+                        <p>Legal notice</p>
+                    </div>
+                </div>
+            </a>
+            <a class="navLink" href="privacy_policy.html" id="id-5">
+                <div class="navCategory">
+                    <div class="navCategory-inner-frame">
+                        <img src="./img/info-icon.png">
+                        <p>Privacy</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>   
 
 </html>
