--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -12,3 +12,119 @@
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
     left: 0;
 }
+
+.navLogo {
+    padding-top: 60px;
+    height: 100px;
+}
+
+.navMenu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 40%;
+    gap: 15px;
+}
+
+.navLink {
+    text-decoration: none;
+}
+
+.navCategory {
+    font-family: 'Inter';
+    font-weight: 400;
+    font-size: 16px;
+    color: #CDCDCD;
+    display: flex;
+    justify-content: center;
+    opacity: 0.7;
+    gap: 20px;
+    width: 100%;
+}
+
+.navCategory img {
+    height: 20px;
+}
+
+.navCategory:hover {
+    background-color: #091931;
+    color: #FFFFFF;
+    opacity: 1;
+}
+
+.active {
+    background-color: #091931;
+    color: #FFFFFF;
+    opacity: 1;
+}
+
+a.active {
+    background-color: #091931;
+    color: #FFFFFF;
+    opacity: 1;
+}
+
+.navCategory-inner-frame {
+    display: flex;
+    align-items: center;
+    width: 150px;
+    gap: 15px;
+}
+
+.sidebar-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 30%;
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+/***********************************Sidebar bottom******************************************************/
+
+.responsiveMain {
+    display: none;
+    width: 100%;
+    height: 80px;
+    background-color: #2A3647;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 0px 12px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+}
+
+.responsiveLinks {
+    text-decoration: none;
+}
+
+.responsiveBox {
+    height: 100%;
+    width: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.responsiveBox:hover {
+    background-color: #091931;
+}
+
+.responsiveBox:hover .responsiveText {
+    color: white;
+}
+
+.responsiveText {
+    color: #CDCDCD;
+}
+
+.responsiveIcons {
+    height: 26px;
+}
+
+
