--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -67,6 +67,6 @@
             </a>
         </div>
     </div>   
-   <!------repsonsive sidebar-->
-   
+   <!------Repsonsive sidebar-->
+
 </html>
