--- a/css/board.css
+++ b/css/board.css
@@ -191,18 +191,9 @@ button:hover {
 .toDoPrio {
   width: 32px;
   height: 32px;
-  background-size: contain;
-}
-.prioLow {
-  background-image: url(../img/prio_low.png);
-}
-
-.prioMedium {
-  background-image: url(../img/prio_medium.png);
-}
-
-.prioUrgent {
-  background-image: url(../img/prio_urgent.png);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Open a ToDo */
@@ -221,7 +212,7 @@ button:hover {
 
 .toDoOpen {
   width: 525px;
-  max-height: 80vh;
+  max-height: 90vh;
   background-color: white;
   border-radius: 30px;
   padding: 48px 40px;
@@ -237,6 +228,20 @@ button:hover {
   box-sizing: border-box; /* Opera/IE 8+ */
 }
 
+.toDoOpenHeader {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.toDoOpenCategory {
+  padding: 4px 24px;
+  border-radius: 8px;
+  color: white;
+  font-size: 23px;
+  font-weight: 400;
+}
+
 .toDoOpenTitle {
   font-size: 61px;
   font-weight: 700;
@@ -244,4 +249,157 @@ button:hover {
 
 .toDoOpenSection {
   color: #2a3647;
+  margin-right: 25px;
+}
+
+.toDoOpenDate {
+  display: flex;
+}
+
+.toDoOpenPrio {
+  display: flex;
+  align-items: center;
+}
+
+.toDoOpenPrioIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.toDoOpenPrioText {
+  margin-right: 10px;
+}
+.boardPrioIcon {
+  width: 17px;
+}
+
+.toDoOpenAssignedContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.toDoOpenAssigned {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  max-height: 240px;
+  overflow-y: auto;
+  margin-top: 8px;
+}
+
+.toDoOpenUserAssigned {
+  display: flex;
+  align-items: center;
+  padding: 7px 16px;
+}
+
+.toDoOpenCircleAssigned {
+  border: solid 2px white;
+  border-radius: 50%;
+  width: 38px;
+  height: 38px;
+  color: white;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.toDoOpenNameAssigned {
+  color: black;
+  font-size: 20px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: row;
+  margin-left: 16px;
+}
+
+.toDoOpenSubtasksContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.toDoOpenSubtasks {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  max-height: 120px;
+  overflow-y: auto;
+  margin-top: 8px;
+}
+
+/* beispiel check box */
+/* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
