--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -13,9 +13,20 @@
 
 <body>
     <header>
+        <img class="headerJoinLogo" src="./img/favicon/join.logo-dark.png">
         <div class="headerText">Kanban Project Management Tool</div>
+        <div class="headerIcons">
+            <a class="header-help" href="help.html" id="id-6">
+                <div><img src="./img/help-icon.png">
+                </div> </a>
+              <div>
+                <img class="userImage" src="./img/profile-img.png" onclick="showLogout()">
+             </div>
+         </div>
+        </div>
     </header>
+
     <div id="header-logout"></div>
-</body>
+    
 
 </html>
