--- a/css/contacts.css
+++ b/css/contacts.css
@@ -27,6 +27,12 @@ body {
   font-size: 50px;
 }
 
+.headline {
+  font-weight: 700;
+  font-size: 50px;
+  padding-right:200px;
+}
+
 .borderStyle {
   height: 50px;
   border: 2px solid #29ABE2;
@@ -37,4 +43,40 @@ body {
   height: 32px;
   font-size: 22px;
   color: #2A3647;
+}
+
+.contact-book-main {
+  overflow-y: auto;
+  box-sizing: border-box;
+  background-color: #FFFFFF;
+  width: 400px;
+  height: calc(100% - 80px);
+  position: absolute;
+  top: 80px;
+  left: 231px;
+  box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 40px;
+  z-index: -1;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-book-main-rs {
+  overflow-y: auto;
+  box-sizing: border-box;
+  background-color: #FFFFFF;
+  width: 400px;
+  height: calc(100% - 80px);
+  position: absolute;
+  top: 80px;
+  left: 231px;
+  box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 40px;
+  z-index: -1;
+  display: none;
+  flex-direction: column;
 }
