--- a/css/contacts.css
+++ b/css/contacts.css
@@ -80,3 +80,23 @@ body {
   display: none;
   flex-direction: column;
 }
+
+.addContactBtn:hover {
+  cursor: pointer;
+  border: 1px solid #29ABE2;
+  background: #29ABE2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.addContactBtn-text {
+  width: 130px;
+  height: 25px;
+  font-weight: 500;
+  font-size: 20px;
+  color: #FFFFFF;
+}
+
+.addContactImg {
+  width: 33px;
+  height: 29px;
+}
