--- a/css/header.css
+++ b/css/header.css
@@ -7,6 +7,7 @@ header {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     padding: 20px 36px 20px 348px;
     box-sizing: border-box;
+    font-family: 'inter', sans-serif;
 }
 
 .headerJoinLogo {
