--- a/css/task.css
+++ b/css/task.css
@@ -22,7 +22,8 @@
 
 .main {
     width: calc(100% - 12rem);
-    padding: 10rem 5rem 0 5rem;;
+    padding: 10rem 5rem 0 5rem;
+    ;
 }
 
 .task-heading-h1 {
@@ -42,10 +43,10 @@
     justify-content: space-between;
     gap: 7rem;
     background-image: linear-gradient(90deg,
-        transparent calc(50% - 0.035rem),
-        #D1D1D1 calc(50% - 0.035rem), 
-        #D1D1D1 calc(50% + 0.035rem), 
-        transparent calc(50% + 0.035rem));
+            transparent calc(50% - 0.035rem),
+            #D1D1D1 calc(50% - 0.035rem),
+            #D1D1D1 calc(50% + 0.035rem),
+            transparent calc(50% + 0.035rem));
 }
 
 .task-input-container {
@@ -78,6 +79,7 @@
     border: 0.075rem solid #D1D1D1;
     border-radius: 0.45rem;
     font-size: 1.25rem;
+    width: 100%;
 }
 
 .task-form-input::placeholder,
@@ -94,6 +96,10 @@
     border-color: #29ABE2 !important;
 }
 
+.task-form-date {
+    cursor: text;
+}
+
 .task-form-text {
     margin-bottom: 1.75rem;
     font-family: inherit;
@@ -104,7 +110,24 @@
     border: 0.075rem solid #D1D1D1;
     border-radius: 0.45rem;
     font-size: 1.25rem;
-    height: 6.5rem;
+    height: 7rem;
+    width: 100%;
+    resize: none;
+}
+
+.task-form-text-wrapper {
+    position: relative;
+}
+
+.task-form-resize-icon {
+    position: absolute;
+    bottom: 2.25rem;
+    right: 0.25rem;
+    width: 18px;
+    height: 18px;
+    display: inline-block;
+    z-index: 6;
+    pointer-events: none;
 }
 
 .task-assign {
@@ -147,16 +170,26 @@
     z-index: 10;
     display: inline-block;
     right: 1rem;
-    top: 0.8rem;
+    top: 0.9rem;
     fill: #2A3647;
-    width: 9px;
+    width: 22px;
+    padding: 0px 6px 3px 6px;
+    border-radius: 50%;
     cursor: pointer;
-    transition: all 0.15s ease-in-out; 
+    transition: all 0.15s ease-in-out;
 }
 
-.task-arrow-dropdown:hover ~ .task-assign,
-.task-arrow-dropdown:hover ~ .task-category {
+.task-arrow-dropdown:hover~.task-assign,
+.task-arrow-dropdown:hover~.task-category {
     border-color: #a7a6a6;
+}
+
+.task-arrow-dropdown:hover {
+    background: #eeefef;
+}
+
+.task-form-date-wrapper {
+    position: relative;
 }
 
 .task-form-prio {
@@ -185,17 +218,17 @@
 
 .urgent-btn-active {
     color: white;
-    background: #FF3D00; 
+    background: #FF3D00;
 }
 
 .medium-btn-active {
     color: white;
-    background: #FFA800; 
+    background: #FFA800;
 }
 
 .low-btn-active {
     color: white;
-    background: #7AE229; 
+    background: #7AE229;
 }
 
 .task-form-urgent-icon {
@@ -232,11 +265,82 @@
 .task-form-add-icon {
     position: absolute;
     z-index: 6;
-    top: 1.15rem;
+    top: 0.8rem;
     right: 0.8rem;
     display: inline-block;
-    width: 13px;
+    width: 25px;
+    padding: 5px;
+    border-radius: 50%;
     cursor: pointer;
+    transition: all .15s ease-in-out;
+}
+
+.task-form-add-icon:hover {
+    background: #eeefef;
+}
+
+.subtask-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.4rem 1rem;
+    font-size: 1rem;
+    border-radius:  0.45rem;
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+}
+
+.subtask-item:hover {
+    background: #eeefef;
+}
+
+.subtask-icon-container {
+    display: flex;
+}
+
+.subtask-edit-icon {
+    opacity: 0;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+}
+
+.subtask-delete-icon {
+    opacity: 0;
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+}
+
+.subtask-separator {
+    display: inline-block;
+    opacity: 0;
+    width: 1px;
+    height: 20px;
+    margin-left: 6px;
+    margin-right: 8px;
+    background-color: #c2c1c1;
+    transition: all .15s ease-in-out;
+}
+
+.subtask-item:hover .subtask-edit-icon,
+.subtask-item:hover .subtask-delete-icon,
+.subtask-item:hover .subtask-separator {
+    opacity: 1;
+}
+
+.subtask-text {
+    font-family: inherit;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    border: unset;
+    font-size: 1rem;
+}
+
+.subtask-text:focus {
+    outline-color: #29ABE2;
 }
 
 .task-submit-container {
@@ -296,7 +400,7 @@
 
 .main-button:hover {
     background-color: #29ABE2;
-    border-color:#29ABE2;
+    border-color: #29ABE2;
     box-shadow: 0 6px 5px rgba(0, 0, 0, 0.18);
 }
 
