--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header</title>
-    <link rel="stylesheet" href="./css/sidebar.css">
-    <link rel="stylesheet" href="./css/header.css">
+    <title>Document</title>
+
+
+
 </head>
 
 <body>
@@ -29,3 +30,4 @@
     
 
 </html>
+
