--- a/css/contacts.css
+++ b/css/contacts.css
@@ -100,3 +100,62 @@ body {
   width: 33px;
   height: 29px;
 }
+
+.addContactBtn {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 5%;
+  bottom: 3%;
+  gap: 10px;
+  width: 193px;
+  height: 53px;
+  background: #2A3647;
+  border: 1px solid #2A3647;
+  border-radius: 10px;
+}
+
+.addContactBtn:hover {
+  cursor: pointer;
+  border: 1px solid #29ABE2;
+  background: #29ABE2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.addContactBtn-text {
+  width: 130px;
+  height: 25px;
+  font-weight: 500;
+  font-size: 20px;
+  color: #FFFFFF;
+}
+
+.addContactImg {
+  width: 33px;
+  height: 29px;
+}
+
+.addContactBtn-rs {
+  box-sizing: border-box;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 90px;
+  right: 25px;
+  gap: 10px;
+  width: 193px;
+  height: 53px;
+  background: #2A3647;
+  border: 1px solid #2A3647;
+  border-radius: 10px;
+}
+
+.addContactBtn-rs:hover {
+  cursor: pointer;
+  border: 1px solid #29ABE2;
+  background: #29ABE2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
