--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -68,6 +68,7 @@
             </a>
         </div>
     </div>   
-   <!------Repsonsive sidebar-->
+     <!---------------------------------------Responsive Sidebar--------------------------------------------->
+
 
 </html>
