--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -31,9 +31,9 @@
 }
 
 .navCategory {
-    font-family: 'Inter';
+    font-family: 'Inter',sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 18px;
     color: #CDCDCD;
     display: flex;
     justify-content: center;
