--- a/css/contacts.css
+++ b/css/contacts.css
@@ -92,3 +92,276 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.addContactBtn-rs {
+  box-sizing: border-box;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 90px;
+  right: 25px;
+  gap: 10px;
+  width: 193px;
+  height: 53px;
+  background: #2A3647;
+  border: 1px solid #2A3647;
+  border-radius: 10px;
+}
+
+.addContactBtn-rs:hover {
+  cursor: pointer;
+  border: 1px solid #29ABE2;
+  background: #29ABE2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.contact-book-main {
+  overflow-y: auto;
+  box-sizing: border-box;
+  background-color: #FFFFFF;
+  width: 400px;
+  height: calc(100% - 80px);
+  position: absolute;
+  top: 80px;
+  left: 231px;
+  box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 40px;
+  z-index: -1;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-book-main-rs {
+  overflow-y: auto;
+  box-sizing: border-box;
+  background-color: #FFFFFF;
+  width: 400px;
+  height: calc(100% - 80px);
+  position: absolute;
+  top: 80px;
+  left: 231px;
+  box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 40px;
+  z-index: -1;
+  display: none;
+  flex-direction: column;
+}
+
+.contact-book-container {
+  box-sizing: border-box;
+  padding-left: 0;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 30px;
+  border-radius: 10px;
+  background: #FFFFFF;
+  margin-top: 15px;
+  cursor: pointer;
+  transition: 100ms ease-in-out;
+  
+}
+
+.contact-book-container:hover {
+ /* background: linear-gradient(180deg, #F9F9F9 0%, #F0F0F0 100%);*/
+  background-color: #2A3647;
+  cursor: pointer;
+  color: white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.contact-circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #29ABE2;
+  border-radius: 100%;
+  height: 50px;
+  width: 50px;
+  border: 2px solid white;
+}
+
+.contact-book-frame {
+  width: 70%;
+}
+
+.contact-book-name {
+  font-size: 20px;
+  word-wrap: break-word;
+}
+
+.contact-book-email {
+  color: #007CEE;
+}
+
+.contactCard-main {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 250px;
+  left: 690px;
+}
+
+.contactCard-header {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  width: 500px;
+}
+
+.contactCard-initials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #FFFFFF;
+  height: 80px;
+  width: 80px;
+  background-color: #29ABE2;
+  border-radius: 100%;
+  font-size: 28px;
+  border: 3px solid white;
+}
+
+.contactCard-name {
+  font-size: 35px;
+  word-wrap: break-word;
+  width: 360px;
+}
+
+.contactCard-task {
+  text-decoration: none;
+  color: #29ABE2;
+  font-size: 14px;
+}
+
+.contactCard-text {
+  margin-top: 30px;
+  display: flex;
+  gap: 30px;
+}
+
+.contactCard-edit-frame {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  gap:10px;
+}
+
+.contactCard-edit-frame img {
+  height: 20px;
+  
+}
+
+.contactCard-edit-frame:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.contactCard-email-frame {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  gap: 10px;
+}
+
+.contactCard-email-headline {
+  font-weight: bold;
+}
+
+.contactCard-email {
+  color: #007CEE;
+}
+
+.contactCard-phone-frame {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  gap: 10px;
+}
+
+.contactCard-phone-headline {
+  font-weight: bold;
+}
+
+.delete-contact {
+  margin-top: 40px;
+  cursor: pointer;
+  width: 129px;
+  height: 26px;
+  background: #2A3647;
+  border: 1px solid #2A3647;
+  border-radius: 10px;
+  color: white;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.delete-contact:hover {
+  cursor: pointer;
+  border: 1px solid #29ABE2;
+  background: #29ABE2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+
+.edit-responsive {
+  display: none;
+  cursor: pointer;
+}
+
+.moveBackBtn {
+  box-sizing: border-box;
+  justify-content: flex-end;
+  display: flex;
+  width: 100%;
+  padding-right: 10px;
+  height: 20px;
+  margin-top: -20px;
+  opacity: 0;
+}
+
+.moveBackBtn:hover {
+  cursor: pointer;
+}
+
+.edit-responsive-form {
+  display: none;
+}
+
+.kanban-title {
+  display: none;
+}
+
+.d-none {
+  display: none;
+}
+.backContactsButton {
+  background: #2A3647;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  padding-top: 9px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: 100;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 35px;
+  height: 43px;
+  margin-right: 330px;
+}
+.backContactsButton:hover {
+  background-color: #0D99FF;
+}
