--- a/css/task.css
+++ b/css/task.css
@@ -1,29 +1,9 @@
-.header {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    height: 5rem;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-    background-color: white;
-}
-
 .task-container {
     display: flex;
 }
 
-.sidebar {
-    position: relative;
-    z-index: 99;
-    background-color: #2A3647;
-    width: 12rem;
-    height: 100vh;
-}
-
 .main {
-    width: calc(100% - 12rem);
-    padding: 10rem 5rem 0 5rem;
-    ;
+    padding: 5rem 2rem 0 21rem;
 }
 
 .task-heading-h1 {
@@ -52,7 +32,7 @@
 .task-input-container {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex: 1 1 464px;
 }
 
 .task-form-label {
@@ -77,7 +57,7 @@
     background-color: white;
     padding: 0.75rem 1rem;
     border: 0.075rem solid #D1D1D1;
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
     font-size: 1.25rem;
     width: 100%;
 }
@@ -109,7 +89,7 @@
     background-color: white;
     padding: 0.75rem 1rem;
     border: 0.075rem solid #D1D1D1;
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
     font-size: 1.25rem;
     height: 7rem;
     width: 100%;
@@ -144,7 +124,7 @@
     background-color: white;
     padding: 0.75rem 1rem;
     border: 0.075rem solid #D1D1D1;
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
     font-size: 1.25rem;
 }
 
@@ -153,9 +133,11 @@
     border-color: #a7a6a6;
 }
 
-.task-category::placeholder {
+.task-category::placeholder,
+.task-assign::placeholder {
     color: black;
 }
+
 
 .task-dropdown-container {
     position: relative;
@@ -204,7 +186,7 @@
     font-size: 1.25rem;
     background-color: white;
     padding: 0.75rem 1rem;
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
@@ -286,7 +268,7 @@
     justify-content: space-between;
     padding: 0.4rem 1rem;
     font-size: 1rem;
-    border-radius:  0.45rem;
+    border-radius:  0.5rem;
     height: 36.8px;
     cursor: pointer;
     transition: all .15s ease-in-out;
@@ -384,7 +366,7 @@
     align-items: center;
     border: 0.075rem solid #2A3647;
     color: #2A3647;
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
     padding: 0.75rem 1.25rem;
     font-size: 1.25rem;
     cursor: pointer;
@@ -410,7 +392,7 @@
     border: 0.075rem solid #2A3647;
     color: white;
     background-color: #2A3647;
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
     padding: 0.75rem 1.25rem;
     font-size: 1.25rem;
     cursor: pointer;
@@ -476,7 +458,7 @@
 
 .assign-contact:hover {
     background-color: #eeefef;
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
 }
 
 .assign-initials {
@@ -532,8 +514,8 @@
     width: 100%;
     display: flex;
     padding: 1rem;
-    border-bottom-left-radius: 0.45rem;
-    border-bottom-right-radius: 0.45rem;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
 }
 
 .main-button--assign {
@@ -550,7 +532,7 @@
 
 .assign-contact-selected {
     background-color: #2A3647;
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
     color: white;
 }
 
@@ -610,8 +592,8 @@
     padding-top: 6px;
     width: 100%;
     z-index: 7;
-    border-bottom-left-radius: 0.45rem;
-    border-bottom-right-radius: 0.45rem;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
 }
 
 .category-overlay {
@@ -632,6 +614,6 @@
 }
 
 .category-item:hover {
-    border-radius: 0.45rem;
+    border-radius: 0.5rem;
     background: #eeefef;
 }
