--- a/css/task.css
+++ b/css/task.css
@@ -448,7 +448,7 @@
 }
 
 .assign-contact {
-    padding: 0.6rem 1rem;
+    padding: 0.5rem 1rem;
     margin-bottom: 0.1rem;
     display: flex;
     align-items: center;
@@ -462,8 +462,8 @@
 }
 
 .assign-initials {
-    width: 33px;
-    height: 33px;
+    width: 36px;
+    height: 36px;
     border-radius: 50%;
     border: 0.1rem solid white;
     font-size: 0.7rem;
@@ -616,4 +616,25 @@
 .category-item:hover {
     border-radius: 0.5rem;
     background: #eeefef;
+}
+
+.initials-container {
+    position: absolute;
+    width: 100%;
+    padding: 0.75rem 1rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.selected-initials {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 0.1rem solid white;
+    font-size: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 0.75rem;
+    color: white;
 }
