--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,18 +1,4 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-
-
-</head>
-
-<body>
     <header>
         <img class="headerJoinLogo" src="./img/favicon/join-favicon.png">
         <div class="headerText">Kanban Project Management Tool</div>
@@ -24,19 +10,7 @@
                <img class="userImage" src="./img/profile-img.png" onclick="showLogout()">
              </div>
          </div>
-=======
-<img class="headerJoinLogo" src="./img/favicon/join.logo-dark.png">
-<div class="headerText">Kanban Project Management Tool</div>
-<div class="headerIcons">
-    <a class="header-help" href="help.html" id="id-6">
-        <div><img src="./img/help-icon.png">
->>>>>>> 9e74b59ef12aeb4622f637a16babaa0befc2895b
-        </div>
-    </a>
-    <div>
-        <img class="userImage" src="./img/profile-img.png" onclick="showLogout()">
-    </div>
-</div>
-</div>
 
 <div id="header-logout"></div>
+
+    </header>
