--- a/css/board.css
+++ b/css/board.css
@@ -596,6 +596,10 @@ button:hover {
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
+#initials-container {
+  position: unset;
+}
+
 /* Add Task on Board */
 
 #addTaskOpenBg {
