--- a/css/board.css
+++ b/css/board.css
@@ -405,7 +405,7 @@ button:hover {
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  max-height: 160px;
+  max-height: 120px;
   overflow-y: auto;
   margin-top: 8px;
 }
@@ -632,4 +632,34 @@ button:hover {
 .addTaskOpenHead {
   display: flex;
   justify-content: space-between;
+}
+
+.taskAddedContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+ width: 100%;
+ height: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.taskAdded {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+  font-size: 20px;
+  background-color: #2A3647;
+  border-radius: 20px;
+  height: 74px;
+  width: 326px;
+}
+
+.taskAdded img {
+  width: 30px;
+  height: 30px;
+  margin-left: 40px;
 }
