--- a/css/board.css
+++ b/css/board.css
@@ -130,13 +130,13 @@ button:hover {
   display: flex;
   flex-grow: 1;
   margin-left: 294px;
-  width: 1208px;
+
 }
 
 .sectionDragArea {
   display: flex;
   flex-direction: column;
-  margin-right: 26px;
+  margin-right: 16px;
 }
 
 .headerDragArea {
@@ -663,3 +663,88 @@ button:hover {
   height: 30px;
   margin-left: 40px;
 }
+
+@media (max-width: 1399.98px) { 
+  .boardHeaderContainer {
+    margin-left: 198px;
+  }
+
+.boardHeader {
+    width: 856px;
+}
+
+  .boradContent {
+    margin-left: 262px;
+  }
+
+  .headerDragArea {
+    width: 200px;
+  }
+
+  .headerDragArea h2 {
+    font-size: 20px;
+  }
+
+  .todo {
+    width: 206px;
+  }
+
+  .toDoSubtasksProgress {
+    width: 100px;
+  }
+
+  .toDoSubtasksCount {
+    text-align: center;
+  }
+ }
+
+ @media (max-width: 1199.98px) {
+  .boradContent {
+    flex-direction: column;
+  }
+
+  .todo {
+
+    height: 240px;
+    flex: 0 0 280px;
+
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box; /* Opera/IE 8+ */
+  } 
+
+
+  .draArea {
+ 
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    overflow-x: auto;
+    max-height: none;
+    overflow-y: unset;
+    flex: none;
+    margin-bottom: 16px;
+
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box; /* Opera/IE 8+ */
+  }
+
+  .noTask {
+width: 280px;
+height: 64px;
+  }
+
+  .inputWithImg {
+    width: 240px;
+  }
+
+  #findTask {
+    width: 160px;
+  }
+
+  .toDoSubtasksProgress {
+    width: 160px;
+  }
+
+  }
