--- a/css/board.css
+++ b/css/board.css
@@ -664,6 +664,14 @@ button:hover {
   margin-left: 40px;
 }
 
+.addTaskMobile {
+  display: none;
+}
+
+.boardHeaderMobile {
+  display: flex;
+}
+
 @media (max-width: 1399.98px) { 
   .boardHeaderContainer {
     margin-left: 198px;
@@ -766,13 +774,17 @@ height: 64px;
     .boardHeaderInteract button {
       font-size: 18px;
     }
+
+
    }
 
    @media (max-width: 850px) {
+
+
     .boardHeaderContainer {
       margin-left: 32px;
-margin-right: 32px;      
-width: calc(100% - 32px);;
+      margin-right: 32px;      
+      width: calc(100% - 32px);;
     }
 
     .boardHeader {
@@ -780,11 +792,128 @@ width: calc(100% - 32px);;
       width: calc(100% - 32px);
     }
 
+    .boardHeader {
+      flex-direction: column;
+   }
+   .boardHeader h1 {
+     font-size: 40px;
+    
+ }
+
     .boradContent {
       margin-left: 32px;
+      margin-bottom: 96px;
     }
 
     .draArea {
       width: calc(100% - 32px);
     }
-   }
+
+    .addTaskDesktop {
+      display: none;
+    }
+
+    .addTaskMobile {
+      display: flex;
+    }
+
+    .sectionDragArea {
+      margin-right: 0;
+    }
+
+    .boardHeaderMobile {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      margin-bottom: 32px;
+    }
+
+      .boardHeaderMobile button {
+        background-color: #2a3647;
+        width: 48px;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .boardHeaderMobile button:hover {
+        background-color: #29abe2;
+      }
+
+      .inputWithImg {
+        margin-right: 0px;
+        width: 100%;
+      }
+  
+      #findTask {
+        width: 90%;
+      }
+    }
+   
+
+   @media (max-width: 767.98px) { 
+
+    .toDoOpen {
+      z-index: 10;
+      border-radius: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      max-height: 100vh;
+      overflow-y: auto;
+      padding: 32px 24px;
+    }
+    }
+
+    @media (max-width: 575.98px) { 
+
+      .boardHeaderContainer {
+        margin-left: 12px;
+        margin-right: 12px;      
+        width: calc(100% - 24px);;
+      }
+
+
+
+  .boardHeaderInteract button {
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+
+
+  .boardHeaderInteract img {
+   width: 24px;
+   height: 24px;
+  }
+
+  #findTask {
+    font-size: 16px;
+    height: 24px;
+  }
+
+  .toDoOpenTitle {
+    font-size: 48px;
+    inline-size: calc(100% - 48px);
+    overflow-wrap: break-word;
+  }
+
+  .boradContent {
+    margin-left: 16px;
+     }
+
+     .todo {
+
+      height: 240px;
+      flex: 0 0 260px;
+    }
+    .toDoSubtasksProgress {
+      width: 120px;
+    }
+
+    .draArea {
+      width: calc(100% - 16px);
+  }
+  }
