--- a/css/summary.css
+++ b/css/summary.css
@@ -198,7 +198,7 @@
   margin-bottom: 3px;
 }
 
-.logedinUser {
+#logedinUser {
   font-size: 64px;
   font-weight: 700;
   color: #29abe2;
@@ -213,12 +213,41 @@
   margin-top: 12px;
 }
 
+#mobileGreet {
+  position: absolute;
+  top: 80px;
+  bottom: 80px;
+  left: 0;
+  right: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background-color: #f6f7f8;
+  flex-direction: column;
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+}
+
+#mobileTimedGreeting {
+  font-size: 36px;
+  font-weight: 400;
+  color: #2a3647;
+  text-align: center;
+}
+
+#mobileLogedinUser {
+  font-size: 47px;
+  font-weight: 700;
+  color: #29abe2;
+  text-align: center;
+}
+
 @media (max-width: 1399.98px) {
   .userGreet {
     margin-left: 48px;
   }
 
-  .logedinUser {
+  #logedinUser {
     font-size: 56px;
   }
 }
@@ -271,6 +300,15 @@
 @media (max-width: 767.98px) {
   .userGreet {
     display: none;
+  }
+
+  #mobileGreet.show {
+    display: flex; /* Show the div when the screen width is less than 768 pixels */
+    opacity: 1;
+  }
+
+  #mobileGreet.hidden {
+    opacity: 0;
   }
 }
 
